# web-file-hasher

./: .eslintrc  .gitattributes  .gitignore  LICENSE  README.md  build.sh  package.json  webpack.common.js  webpack.dev.js  webpack.prod.js
hashing-lib/: Cargo.toml
hashing-lib/src/: lib.rs
public/: hashing_lib.js  hashing_lib_bg.wasm  index.html  styles.css  util.js
src/: index.js
