[package]
name = "hashing-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "0.2"
sha2 = "0.10"
sha3 = "0.10.8"
md-5 = "0.10.6"
blake2 = "0.10.6"
base64ct = { version="1.6.0", features=["alloc"]}
ripemd = "0.1.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
